[package]
name = "ndn-ndnlp"
description = "NDN Link Protocol"
version = "0.1.0"
edition = "2021"
license = "MIT"
categories = ["network-programming", "parsing"]
keywords = ["ndn", "named", "data", "networking", "ndnlp"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
