[package]
name = "ndn-ndnlp"
description = "NDN Link Protocol"
version = "0.4.0"
edition = "2021"
license = "MIT"
categories = ["network-programming", "parsing"]
keywords = ["ndn", "named", "data", "networking", "ndnlp"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.5.0"
ndn-protocol = { version = "0.4.0", path = "../ndn-protocol" }
ndn-tlv = { version = "0.4.0", path = "../ndn-tlv" }

[dev-dependencies]
hex = "0.4.3"
